--- a/Demo_sensitivity_analysis.ipynb
+++ b/Demo_sensitivity_analysis.ipynb
@@ -447,7 +447,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ~ ??? min runtime\n",
+    "# ~ 7 hours runtime\n",
     "start_time = time.time()\n",
     "\n",
     "# calculate LAI sensitivity to sub-surface soil moisture from 1982 to 2017 using random forests and SHAP values\n",
