--- a/Demo_sensitivity_analysis.ipynb
+++ b/Demo_sensitivity_analysis.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "def data_path(filename):\n",
     "    file_path = \"{path}/{filename}\".format(\n",
-    "        path=\"/Net/Groups/BGI/scratch/wantong/study2/data_to_upload\",\n",
+    "        path=\"...your_path...\",\n",
     "        filename=filename\n",
     "    )\n",
     "    return file_path\n",
