--- a/Demo_sensitivity_analysis.ipynb
+++ b/Demo_sensitivity_analysis.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "def data_path(filename):\n",
     "    file_path = \"{path}/{filename}\".format(\n",
-    "        path=\"...your_path...\",\n",
+    "        path=\"...your_path.../",\n",
     "        filename=filename\n",
     "    )\n",
     "    return file_path\n",
@@ -309,12 +309,12 @@
    "outputs": [],
    "source": [
     "# load hydro-climate variables (near-surface soil moisture, sub-surface soil moisture, precipitation, temperature, vapor pressure deficit, solar radiation)\n",
-    "SM1 = read_data('/Net/Groups/BGI/scratch/wantong/study2/original_data/ERA5-Land/0d50_monthly/ERA5-land-mm_SMsurf_1982_2017_monthly_0d50.npy')\n",
-    "SM2 = read_data('/Net/Groups/BGI/scratch/wantong/study2/original_data/ERA5-Land/0d50_monthly/ERA5-land-mm_SMroot_1982_2017_monthly_0d50.npy')\n",
-    "TP = read_data('/Net/Groups/BGI/scratch/wantong/study2/original_data/TRENDY_climate/CRUJRApre_444_0.5.npy')\n",
-    "T2M = read_data('/Net/Groups/BGI/scratch/wantong/study2/original_data/TRENDY_climate/CRUJRAtmp_444_0.5.npy')\n",
-    "SSRD = read_data('/Net/Groups/BGI/scratch/wantong/study2/original_data/TRENDY_climate/CRUJRAdswrf_444_0.5.npy') / (1000000 / 86000) # convert unit from W/m2 to MJ/m2\n",
-    "VPD = read_data('/Net/Groups/BGI/scratch/wantong/study2/original_data/TRENDY_climate/CRUJRAvpd_444_0.5.npy')\n",
+    "SM1 = read_data('test/ERA5-land-mm_SMsurf_1982_2017_monthly_0d50.npy')\n",
+    "SM2 = read_data('test/ERA5-land-mm_SMroot_1982_2017_monthly_0d50.npy')\n",
+    "TP = read_data('test/TRENDY_climate/CRUJRApre_444_0.5.npy')\n",
+    "T2M = read_data('test/CRUJRAtmp_444_0.5.npy')\n",
+    "SSRD = read_data('test/CRUJRAdswrf_444_0.5.npy') / (1000000 / 86000) # convert unit from W/m2 to MJ/m2\n",
+    "VPD = read_data('test/CRUJRAvpd_444_0.5.npy')\n",
     "\n",
     "LAI[LAI < 0] = np.nan\n",
     "SM1[SM1 < 0] = np.nan # mm\n",
